fixed the gap between the search and the add item on the item page

--- a/dashboard.css
+++ b/dashboard.css
@@ -73,17 +73,19 @@ body {
 
 .header--wrapper {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     background: #fff;
     border-radius: 10px;
     padding: 10px 2rem;
     margin-bottom: 1rem;
+    justify-content: flex-end;
 }
 
 .header--title {
     color: rgba(113, 99, 186, 255);
+    margin-right: auto;
+    
 }
 
 .user--info {
@@ -98,7 +100,6 @@ body {
     color: rgba(113, 99, 186, 255);
     display: flex;
     align-items: center;
-    gap: 5px;
     padding: 4px 12px;
 }
 
@@ -297,6 +298,9 @@ tfoot td {
     font-size: 24px;
     text-decoration: none;
     cursor: pointer;
+    margin-left: 5px;
+    
+   
 }
 
 
